# finsight

./: README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: ci.yml
finsight/: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
finsight/agents/: account_agent.py  compliance_agent.py  dispute_agent.py  eligibility_agent.py  fraud_agent.py  knowledge_agent.py  orchestrator.py  service_copilot.py  state.py
finsight/api/: audit.py  auth.py  config.py  llm.py  main.py  rate_limit.py
finsight/api/routers/: customer.py  staff.py
finsight/data/: golden_eval_set.jsonl  synthetic_customers.py
finsight/data/knowledge_base/customer_facing/: checking_account_terms.md  credit_card_terms.md  dispute_process.md  personal_loan_faq.md  savings_rate_sheet.md  savings_rate_sheet_2024_superseded.md
finsight/data/knowledge_base/internal/: aml_alert_handling.md  kyc_cip_sop.md  reg_e_guidance.md  service_response_standards.md
finsight/eval/: load_test.py  run_ragas_eval.py  thresholds.yaml
finsight/frontend/: customer_app.py  staff_console.py
finsight/guardrails/: input_guard.py  output_guard.py
finsight/guardrails/policies/: compliance_rules.yaml
finsight/observability/: langfuse_setup.py
finsight/retrieval/: chunking.py  embeddings.py  hybrid_retriever.py  ingest.py  reranker.py
finsight/scripts/: bootstrap.sh  init_db.sql  seed_knowledge_base.sh
finsight/tests/integration/: test_orchestrator.py
finsight/tests/unit/: test_core.py
finsight/tools/: mock_core_banking_api.py  schemas.py  tool_registry.py
