[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finsight"
version = "1.0.0"
description = "FinSight — Multi-Agent RAG Platform for Banking"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FinSight Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "python-jose[cryptography]>=3.3.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.12",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "qdrant-client>=1.12.0",
  "rank-bm25>=0.2.2",
  "numpy>=1.26.0",
  "pyyaml>=6.0.2",
  "sqlalchemy>=2.0.36",
  "streamlit>=1.40.0",
  "requests>=2.32.0",
  "tenacity>=9.0.0",
  "structlog>=24.4.0",
  "orjson>=3.10.0",
  "python-dateutil>=2.9.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.7.0",
]

[project.optional-dependencies]
full = [
  "sentence-transformers>=3.0.0",
  "presidio-analyzer>=2.2.354",
  "presidio-anonymizer>=2.2.354",
  "spacy>=3.7.0",
  "psycopg2-binary>=2.9.10",
  "asyncpg>=0.30.0",
  "ragas>=0.2.0",
  "datasets>=3.0.0",
  "locust>=2.32.0",
  "langfuse>=2.50.0",
]
dev = ["ruff>=0.7.0", "mypy>=1.13.0", "pytest-cov>=6.0.0"]

[project.scripts]
finsight-ingest = "retrieval.ingest:main"
finsight-eval = "eval.run_ragas_eval:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "agents*", "guardrails*", "retrieval*", "tools*", "observability*", "eval*", "data*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP042"]
